feat(MT): update Swagger descriptions (#3592)